[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/memo-theme.tres" type="Theme" id=1]
[ext_resource path="res://game/tutorial/TutorialHint.gd" type="Script" id=2]

[node name="TutorialHint" type="PanelContainer"]
margin_right = 146.0
margin_bottom = 164.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 145.0
margin_bottom = 163.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 157.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_clip_content = false
scroll_active = false

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 134.0
margin_bottom = 128.0
text = "don't show again"

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 134.0
margin_bottom = 152.0
text = "close"
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
